cargo-features = ["edition2024"]

[package]
name = "yuki"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "1.0.0", features = ["add"] }
itertools = "0.13.0"
nom = "7.1.3"
num-traits = "0.2.19"
thiserror = "2.0.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[lints.rust]
unsafe_code = "forbid"