[package]
name = "yuki"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["add", "not", "display"] }
itertools = "0.14.0"
nom = "8.0.0"
nom-language = "0.1.0"
num-traits = "0.2.19"
thiserror = "2.0.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
